care/force-app/main/default/objects/Record_Type_Fields_Control_Settings__mdt/Record_Type_Fields_Control_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Record Type Fields Control Settings</label>
    <pluralLabel>Record Type Fields Control Settings</pluralLabel>
</CustomObject>