care/force-app/main/default/objects/Record_Type_Fields_Control_Settings__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
                <default>true</default>
                <label>Case</label>
            </value>
            <value>
                <fullName>Email Message</fullName>
            </value>
            <value>
                <fullName>Survey Feedback</fullName>
            </value>
            <value>
                <fullName>Social Post</fullName>
            </value>
            <value>
                <fullName>Live Chat Transcript</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>