care/force-app/main/default/objects/Record_Type_Fields_Control_Settings__mdt/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCPA Access Data</fullName>
                <default>true</default>
                <label>CCPA Access Data</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>