care/force-app/main/default/objects/Record_Type_Fields_Control_Settings__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUC</fullName>
            </value>
            <value>
                <fullName>Senior Care Consult</fullName>
            </value>
            <value>
                <fullName>AS - Standard</fullName>
            </value>
            <value>
                <fullName>AS - Child Care</fullName>
            </value>
            <value>
                <fullName>AS - Housekeeping</fullName>
            </value>
            <value>
                <fullName>AS - Personal Assistant</fullName>
            </value>
            <value>
                <fullName>AS - Pet Care</fullName>
            </value>
            <value>
                <fullName>AS - Tutor</fullName>
            </value>
            <value>
                <fullName>AS - Child Care Center</fullName>
            </value>
            <value>
                <fullName>Social Media US</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Mobile Help</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Senior Care Case Survey</fullName>
            </value>
            <value>
                <fullName>Senior Care Event Survey</fullName>
            </value>
            <value>
                <fullName>Senior Care Provider Feedback Survey</fullName>
            </value>
            <value>
                <fullName>BUC US Surveys</fullName>
            </value>
            <value>
                <fullName>Member Care Case Survey</fullName>
            </value>
            <value>
                <fullName>Assisted Search Survey</fullName>
            </value>
            <value>
                <fullName>Assisted Search Survey - Provider</fullName>
            </value>
            <value>
                <fullName>Member Surveys</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>