care/force-app/main/default/objects/Record_Type_Fields_Control_Settings__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Process_Name__c</columns>
    <columns>Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
    <language>en_US</language>
</ListView>